--- a/Brakt.Rest/appsettings.json
+++ b/Brakt.Rest/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "BraktDb": "Data Source=/var/data/Brakt.db;Version=3;foreign keys=true;"
+    "BraktDb": "Data Source=/var/data/Brakt.db;foreign keys=true;"
   }
 }
