--- a/Brakt.Bot/appsettings.json
+++ b/Brakt.Bot/appsettings.json
@@ -4,6 +4,6 @@
     "TokenType": "Bot"
   },
   "BraktClient": {
-    "BaseUrl": "http://localhost:5000"
+    "BaseUrl": "http://192.168.1.105:5000/"
   }
 }
